[gd_scene load_steps=2 format=3 uid="uid://co58fv0qwjltu"]

[ext_resource type="Script" path="res://HUD.gd" id="1_65rpq"]

[node name="HUD" type="Node"]
script = ExtResource("1_65rpq")

[node name="GetReady" type="Label" parent="."]
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -33.5
offset_right = 120.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Get ready!"
horizontal_alignment = 1

[node name="Currency" type="Label" parent="."]
top_level = true
offset_left = 12.0
offset_top = 311.0
offset_right = 91.0
offset_bottom = 334.0
theme_override_font_sizes/font_size = 10
text = "Currency: "
metadata/_edit_use_anchors_ = true

[node name="Health" type="Label" parent="."]
top_level = true
offset_left = 12.0
offset_top = 327.0
offset_right = 72.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 10
text = "Health: "
metadata/_edit_use_anchors_ = true

[node name="GetReadyTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="TimeRemaining" type="Label" parent="."]
top_level = true
offset_left = 507.0
offset_top = 330.0
offset_right = 640.0
offset_bottom = 353.0
theme_override_font_sizes/font_size = 10
text = "Time Remaining: "
metadata/_edit_use_anchors_ = true

[node name="CurrentStage" type="Label" parent="."]
top_level = true
offset_left = 507.0
offset_top = 316.0
offset_right = 640.0
offset_bottom = 339.0
theme_override_font_sizes/font_size = 10
text = "Current Stage: "
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="GetReadyTimer" to="." method="_on_get_ready_timer_timeout"]
